--- a/Css/MainStyle.css
+++ b/Css/MainStyle.css
@@ -8,8 +8,20 @@
     src: local("Jost_Strong"), url('../Fonts/Jost-Black.ttf');
 }
 
+.Header h1{
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.Header button{
+    position: fixed;
+    right: 0;
+}
+
 .buttonHeader {
     text-align: center;
+    align-items: center;
+    align-self: center;
 }
 
 .centre {
@@ -37,39 +49,33 @@
 footer p {
     font-family: sans-serif;
     font-size: 15px;
-    color: rgb(170, 214, 255);
+    color: rgb(255, 255, 255);
     
 }
 
 a {
-    color: #ffff;
+    color: #ffffff;
 }
 
-
 footer {
-    width: 100%;
-    
-    position: absolute;
-    background: linear-gradient(rgb(0, 255, 242)0% ,rgb(63, 63, 63) 20%, rgb(26, 25, 25)100%);
-    left: 0;
     text-align: center;
+    position: static;
 }
 
 html {
-    background: linear-gradient(rgb(233, 254, 255) 5%, rgb(148, 255, 250) 35%, rgb(0, 255, 242) 100%) no-repeat center;
+    background-image: url("../Images/Background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color:rgb(26, 25, 25);
 }
 
 .button {
-    background-color: #00ff22;
+    background-color: #ffffff;
     color: rgb(77, 77, 77);
     text-align: center;
     font-size: 28px;
     font-family: Jost_Classic;
     font:large;
-    margin: 15px 4%;
+    margin: 15px 18px;
     border-radius: 50px;
     border:none;
     padding: 2px 30px;
@@ -85,37 +91,14 @@ html {
     margin: 15px 15px;
 }
 
-.buttonDownload {
-    background-color: #1900ff;
-    color: rgb(77, 77, 77);
-    font-style: Jost_Classic;
-    text-align: center;
-    font-size: 18px;
-    font-family: Jost_Classic;
-    font:large;
-    margin: 0px 10px;
-    border-radius:10px;
-    border:none;
-}
-
 .button:hover {
-    background-color: #168300;
+    background-color: #ffffff;
     color: rgb(255, 255, 255);
     transition: 0.2s;
 }
 
 .button:active {
-    background-color: #00ff22;
-    transition: 0.1s;
-}
-
-.buttonDownload:hover {
-    background-color:#008aad;
-    transition: 0.2s;
-}
-
-.buttonDownload:active {
-    background-color: #8670ff;
+    background-color: #ffffff;
     transition: 0.1s;
 }
 
@@ -124,18 +107,18 @@ html::-webkit-scrollbar {
 }
 
 html::-webkit-scrollbar-track {
-    background-color: #e7ffca;
+    background-color: #ffffff;
 }
 
 html::-webkit-scrollbar-thumb {
-    background: #7dff63;
+    background: #c5c5c5;
     border-radius: 20px;
 }
 
 p {
     font-family: Jost_Classic;
     font-size: 20px;
-    color: rgb(51, 51, 51);
+    color: rgb(255, 255, 255);
     margin : 5px 5px 5px 8px;
     text-align: center;
 }
@@ -144,14 +127,14 @@ h6 {
     font-family: Jost_Classic;
     font-size: 40px;
     text-align: center;
-    color: rgb(41, 41, 41);
+    color: rgb(255, 255, 255);
 }
 
 h5 {
     font-family: Jost_Classic;
     font-size: 18px;
     text-align: center;
-    color: rgb(214, 214, 214);
+    color: rgb(255, 255, 255);
 }
 
 h4{
@@ -159,14 +142,14 @@ h4{
     font-size: 30px;
     text-align: center;
     margin-bottom: 0%;
-    color: rgb(218, 214, 214);
+    color: rgb(255, 255, 255);
 }
 
 h1 {
     font-family: Jost_Classic;
     font-size: 50px;
     margin-left: 10%;
-    color: rgb(50, 241, 255);
+    color: rgb(255, 255, 255);
     
 }
 
@@ -178,32 +161,14 @@ h2 {
     font-family: Jost_Strong;
     font-size: 50px;
     text-align: center;
-    color: rgb(116, 116, 116);
+    color: rgb(255, 255, 255);
 }
 
 h3 {
     font-family: Jost_Classic;
     font-size: 35px;
     text-align: center;
-    color: rgb(35, 175, 0);
-}
-
-code {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    color: #ffff;
-}
-
-.ScriptBox {
-    align-items: flex-start;
-    background: rgb(66, 66, 66);
-    justify-content: space-between;
-    display:flex;
-    text-align: left;
-    border: 1px solid rgb(122, 122, 122);
-    border-radius: 8%;
-    border-style: dashed;
-    grid-template-columns: 120px 120px 120px;
+    color: rgb(255, 255, 255);
 }
 
 .carousel{
